--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "axios": "^1.4.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
+    "sort-by": "^1.2.0",
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
